<resources>
    <string name="app_name">Anti Korrupsiya</string>
    <string name="input_mobile_number">Telefon raqamini kiriting...</string>
    <string name="continue_button">DAVOM ETISH</string>
    <string name="number_phone">Telefon raqam:</string>
    <string name="add_to_basket">Korzinkaga qo\'shish</string>
    <string name="update_basket">O\'zgartirish</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_phone_number">Введите номер телефона, что бы войти или зарегистрироваться</string>
    <string name="please_input_code">На ваш номер был отправлен код подтверждения. Пожалуйста введите код</string>
    <string name="sign">Вход</string>
    <string name="confirm">Подтверждение</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="please_input_all_fields">Пожалуйста, заполните все поля.</string>
    <string name="register_order">Отправить</string>
    <string name="contact_data">Клиент данные</string>
    <string name="fullname">Имя Фамилия</string>
    <string name="fullname_">Имя Фамилия:</string>
    <string name="phone">Номер телефона</string>
    <string name="phone_">Номер телефона:</string>
    <string name="comment">Комментарий</string>
    <!-- <string name="your_data">Личные данные</string>-->
    <string name="your_data">Главная</string>
    <string name="edit">Изменить</string>
    <string name="code">Код</string>
    <string name="success">Успешно!</string>
    <string name="your_order_accept">Ваш заказ был успешно отправлен. Вы можете отслеживать статус заказа из окна заказов.</string>
    <string name="exit_main_page">Вернуться в главное окно</string>
    <string name="swap_language">Выбрать язык</string>
    <string name="notifications">Уведомления</string>
    <string name="language">Смени язык</string>
    <string name="share">Поделится</string>
    <string name="about_app">О приложении</string>
    <string name="logout">Выйти</string>
    <string name="current_store">ОБРАЩЕНИЕ</string>
    <string name="catgory1">Я столкнулся с взяточничеством и дал взятку</string>
    <string name="category2">Я столкнулся с взяточничеством, но не дал взятку. Я против коррупции</string>
    <string name="category3">Я столкнулся с видом коррупции не связенной с взяточничеством</string>
    <string name="category4">Я встретил честного сотрудника государственного органа</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="news">Новости</string>
    <string name="dashboard">Сообщить</string>
    <string name="wishlist">Статистика</string>
    <string name="account">FAQ</string>
    <string name="download">Скачать</string>
    <string name="please_update_app">Пожалуйста, загрузите новую версию приложения!</string>
    <string name="refreshed">Обновлено.</string>
    <string name="call_me">Связаться с нами</string>
    <string name="store_or_man_name">Название компании</string>
    <string name="please_select_region">Пожалуйста, выберите регион.</string>
    <string name="ditrict">Район</string>
    <string name="region">Область</string>
    <string name="murojaat">Государство гарантирует конфиденциальность ваших личных и отправляемых данных</string>
    <string name="title">Агентство по противодействию коррупции Республики Узбекистан</string>
    <string name="shahar">Город</string>
    <string name="murojaat1">Обращение</string>
    <string name="murojaat2">Часто задаваемые вапросы</string>
    <string name="zayavka">Подать заявку</string>
    <string name="tashkilot">Организация</string>
    <string name="hudud">Выберите регион</string>
    <string name="murojaat_matni">Текст заявления</string>
    <string name="pora_hajmi">Размер взятки (сумма)</string>
    <string name="murojat_mazmuni">Содержание обращения</string>
    <string name="Обращение">Обращение</string>
    <string name="oneid">OneID</string>
    <string name="agentlik">Обращения не авторизованных пользователей будут иметь статус анонимный. Агентство имеет право не рассматривать анонимные обращения Рекомендуем зарегистрироваться</string>
    <string name="savollar">Вопросы</string>
    <string name="your_Data">Ваши данные</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="not_network">Отключение сети. Пожалуйста, проверьте настройки сети.</string>

    <string name="murojaatt">Обращения не авторизованных пользователей будут иметь статус анонимный</string>
    <string name="qo_ng_iroq_markazi_1070">Колл-центр: 1070</string>

    <string-array name="holder">
        <item name="category">Please select</item>
    </string-array>

    <string-array name="makes">
        <item name="toyota">Toyota</item>
        <item name="mazda">Mazda</item>
        <item name="subaru">Subaru</item>
        <item name="honda">Honda</item>
        <item name="benz">Mercedes Benz</item>
        <item name="bmw">BMW</item>
    </string-array>

    <string-array name="mazda">
        <item name="premacy">Premacy</item>
        <item name="demio">Demio</item>
        <item name="axela">Axela</item>
        <item name="cx5">CX-5</item>
        <item name="atenza">Atenza</item>
        <item name="verisa">Verisa</item>
    </string-array>

    <string-array name="subaru">
        <item name="legacy">Legacy</item>
        <item name="outback">Outback</item>
        <item name="forester">Forester</item>
        <item name="imprezza">Imprezza</item>
        <item name="xv">XV</item>
        <item name="exiga">Exiga</item>
    </string-array>

    <string-array name="honda">
        <item name="fit">Fit</item>
        <item name="airwave">Airwave</item>
        <item name="civic">Civic</item>
        <item name="crv">CR-V</item>
        <item name="crossroad">Crossroad</item>
        <item name="accord">Accord</item>
    </string-array>

    <string-array name="benz">
        <item name="c200">C200</item>
        <item name="e250">E250</item>
        <item name="a180">A180</item>
        <item name="ml350">ML350</item>
        <item name="c250">C250 Coupe</item>
        <item name="gl300">GL300</item>
    </string-array>

    <string-array name="bmw">
        <item name="318">318i</item>
        <item name="325">325i</item>
        <item name="525">535i</item>
        <item name="x5">X5</item>
        <item name="x6">X6</item>
        <item name="m5">M5</item>
    </string-array>

    <string-array name="toyota">
        <item name="corolla">Corolla</item>
        <item name="premio">Premio</item>
        <item name="fielder">Fielder</item>
        <item name="prado">Landcruiser Prado</item>
        <item name="harrier">Harrier</item>
        <item name="hilux">Hilux</item>
        <item name="prado">Landcruiser Prado</item>
        <item name="nze">NZE</item>
        <item name="axio">Axio</item>
        <item name="vitz">Vitz</item>
    </string-array>

    <string-array name="condition">
        <item name="new">Brand New</item>
        <item name="used">Used</item>
    </string-array>

    <string-array name="category">
        <item name="accessories">Accessories</item>
        <item name="body">Body &amp; Trim</item>
        <item name="braking">Braking</item>
        <item name="cooling">Cooling</item>
        <item name="engine">Engine</item>
        <item name="fluids">Fluids</item>
        <item name="suspension">Suspension</item>
        <item name="transmission">Transmission</item>
        <item name="wheels">Wheels &amp; Tyres</item>
    </string-array>

    <string-array name="year">
        <item name="98">1998</item>
        <item name="99">1999</item>
        <item name="00">2000</item>
        <item name="01">2001</item>
        <item name="02">2002</item>
        <item name="03">2003</item>
        <item name="04">2004</item>
        <item name="05">2005</item>
        <item name="06">2006</item>
        <item name="07">2007</item>
        <item name="08">2008</item>
        <item name="09">2009</item>
        <item name="10">2010</item>
        <item name="11">2011</item>
        <item name="12">2012</item>
        <item name="13">2013</item>
        <item name="14">2014</item>
        <item name="15">2015</item>
        <item name="16">2016</item>
        <item name="17">2017</item>
        <item name="18">2018</item>
    </string-array>

    <string-array name="body">
        <item name="hatchback">Hatchback</item>
        <item name="sedan">Sedan</item>
        <item name="convertible">Convertible</item>
        <item name="suv">SUV/Crossover</item>
        <item name="wagon">Wagon</item>
        <item name="pickup">Pickup</item>
    </string-array>

    <string-array name="fuel">
        <item name="petrol">Petrol</item>
        <item name="diesel">Diesel</item>
        <item name="electric">Electric</item>
        <item name="hybrid">Hybrid</item>
    </string-array>

    <string-array name="transmission">
        <item name="auto">Automatic</item>
        <item name="manual">Manual</item>
        <item name="cvt">CVT</item>
    </string-array>

    <string-array name="drive">
        <item name="2wd">2WD</item>
        <item name="4wd">4WD</item>
        <item name="awd">AWD</item>
    </string-array>

</resources>
