<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
<!--    <item
        android:id="@+id/actionProfile"
        android:title="@string/your_data" />-->
    <item
        android:id="@+id/main"
        android:title="@string/your_data" />

    <item
        android:id="@+id/murojaat"
        android:title="@string/murojaat1" />
    <item
        android:id="@+id/faq"
        android:title="@string/murojaat2" />
    <item
        android:id="@+id/actionLanguage"
        android:title="@string/language" />

    <item
        android:id="@+id/actionNews"
        android:title="@string/news" />

    <item
        android:id="@+id/actionShareApp"
        android:title="@string/share" />

    <item
        android:id="@+id/actionAboutUs"
        android:title="@string/about_app" />

    <item android:id="@+id/actionLogout"
        android:title="@string/logout"/>
</menu>