<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    tools:context=".screen.main.faq.FaqFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            android:orientation="vertical">

           <!-- <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_account_circle_black_24dp"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/tvPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:text="Person Name"/>

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginBottom="8dp"
                android:textColor="@color/black"
                tools:text="Person Name"/>-->


            <TextView
                android:text="@string/murojaat_matni"
                android:paddingStart="10dp"
                android:textSize="16sp"
                android:layout_gravity="center"
                android:textColor="@android:color/black"
                android:paddingEnd="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/EditTextBox"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <EditText
                    android:id="@+id/edComment"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/comment" />
            </com.google.android.material.textfield.TextInputLayout>
            <androidx.cardview.widget.CardView
                android:id="@+id/send"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="26dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/colorAccent"
                app:cardElevation="1dp"
                app:contentPadding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:text="@string/register_order"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="16dp"
                app:cardElevation="4dp"
                app:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:id="@+id/lyProfile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:text="@string/your_Data"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:tint="@color/gray_text"
                            android:src="@drawable/ic_chevron_right_black_24dp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/gray_text"/>


                    <LinearLayout
                        android:id="@+id/lyLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:textColor="@color/black"
                            android:text="@string/language"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:tint="@color/gray_text"
                            android:src="@drawable/ic_chevron_right_black_24dp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="@color/gray_text"/>

                    <LinearLayout
                        android:id="@+id/lyLogout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:layout_gravity="center"
                            android:textColor="#D50000"
                            android:text="@string/logout"/>
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="25dp"
                            android:tint="@color/gray_text"
                            android:src="@drawable/ic_chevron_right_black_24dp"/>
                    </LinearLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>

</FrameLayout>